# structured-deduip

./: Cargo.toml
src/: filesystemtable.rs  lib.rs  main.rs  pathstore.rs
