[package]
name = "structured-dedup"
version = "0.1.0"
authors = ["Morten Johan Sørvig <morten.sorvig@qt.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
jwalk = "0.5"
rayon = "1.5"
indicatif = { version = "*", features = ["rayon"] }
rand = "0.7"
serde = { version =  "1.0", features = ["derive"] }
bincode = "1.2"
