[package]
name = "structured-dedup"
version = "0.1.0"
authors = ["Morten Johan Sørvig <morten.sorvig@qt.io>"]
edition = "2018"

[[bin]]
name = "dedup"
path = "src/main.rs"

[lib]
name = "structureddedup"
path = "src/lib.rs"

[dependencies]
clap = "3.0.0-beta.2"
#jwalk = "0.5"
rayon = "1.5"
indicatif = { version = "*", features = ["rayon"] }
rand = "0.7"
serde = { version =  "1.0", features = ["derive"] }
bincode = "1.2"
num_cpus = "1.13.0"
itertools = "0.10.0"
crossbeam = "0.8"
blake3 = "*"
zstd = "0.5"
thiserror = "*"
bimap = { version = "0.4.0", features = ["serde"] }
smallvec = "1.6"
log = "0.4"

#filesystemtable = { git = "ssh://github.com/msorvig/rust-filesystemtable.git" }
filesystemtable = { path = "../rust-filesystemtable" }